--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -31,6 +31,7 @@ security:
 
     access_control:
         - { path: ^/api/register, roles: PUBLIC_ACCESS }
+        - { path: ^/api/doc, roles: PUBLIC_ACCESS }
         - { path: ^/api/login, roles: PUBLIC_ACCESS }
         - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
 
